Changed name and major!

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-      <h1>My Name</h1>
+      <h1>Crystal Ong</h1>
       <p>
-         I'm a student at Smith College majoring in something!
+         I'm a student at Smith College majoring in Government and Economics!
       </p>
   </body>
 </html>
